[gui-components] clean up code a bit for GTW